Bug 395454 - "[Mac] Have one file, scrollbars.css" [p=mozcbarrett@gmail.com (Colin Barrett [cbarrett]) r=Enn r=Neil sr=roc a1.9=damons]
UltraBlame original commit: 3f420e7064c7ce69a7ec5a72070cb1c3b174c3a6

--- a/toolkit/themes/pinstripe/global/nativescrollbars.css
+++ b/toolkit/themes/pinstripe/global/nativescrollbars.css
@@ -60,21 +60,21 @@ html|select[multiple] > scrollbar {
 
 
 slider {
-  -moz-appearance: scrollbartrack-vertical;
+  -moz-appearance: scrollbartrack-horizontal;
 }
 
-slider[orient="horizontal"] {
-  -moz-appearance: scrollbartrack-horizontal;
+slider[orient="vertical"] {
+  -moz-appearance: scrollbartrack-vertical;
 }
 
 
 
 thumb {
-  -moz-appearance: scrollbarthumb-vertical;
+  -moz-appearance: scrollbarthumb-horizontal;
 }
 
-thumb[orient="horizontal"] {
-  -moz-appearance: scrollbarthumb-horizontal;
+thumb[orient="vertical"] {
+  -moz-appearance: scrollbarthumb-vertical;
 }
 
 
